========================
0.0.67
========================

- improved `encoding` in the `FlowStreamMessage.variables(str, [data], [encoding])` method (it can be a `function(val, key)`)
- improved `encode` argument in `String.args()` - now it can be a `function(val, key)`
- improved error handling in JSON Schemas
- fixed routing

========================
0.0.66
========================

- fixed `update` operation in QueryBuilder NoSQL
- fixed uploading of `mp4` files
- fixed `callback` argument in the `MailMessage.send2()` method
- added `options.tz` for the cluster mode
- updated `FlowStreamMessage.variables()` by adding support for nested properties `path1.path2.value`
- updated `FlowStreamMessage.variables()` keys for `data` must be in the form `{data.key}`
- updated `FlowStreamMessage.variables(str, [data], [encoding])` by adding `encoding` argument
- updated `FlowStreamMessage.variables()` by adding `{hostname}` keyword for obtaining of main hostname
- fixed parsing JSON schemas from the string
- improved parsing of inline JSON schemas by adding subtypes like `email`, `smallint`, `zip`, etc.
- added `JSONSchemaObject.transform(value)` method
- updated schemas by sending raw data if the schema doesn't contain any field

========================
0.0.65
========================

- fixed TextDB output when `TextDB.paginate()` without sorting
- fixed `default_root` option for inline merging files directly in the views
- added `NEWAPI(name, function(opt, next))`
- added `API(name, schema, model)`
- fixed cache in CMS Render
- improved helpers in Macros (`this` contains a current model)
- updated `QueryBuilder.language()` by adding support for `$ {Object}` as the first argument
- fixed timezone in for the `cluster` mode

========================
0.0.64
========================

- fixed `session.onlocale()`
- fixed prefixes in `QueryBuilder.language()` method
- added auto-measuring width/height for `.webp`, `.bmp` and `.psd` images